[tool.poetry]
name = "ianf"
version = "0.1.0"
description = "Controle de distribuição de marmitas - IAMF"
authors = ["José Hermes Vieira Chaves <jhvc.hermes@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.4"
httpx = "^0.27.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT'] #Exatamente o que deve ser analisado

[tool.ruff.format] # Formatador do código
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev iamf/app.py --port 8002 --host 191.252.92.30'
pre_test = 'task lint'
test = 'pytest -s -x --cov=iamf -vv'
post_test = 'coverage html && cp -r htmlcov /var/www/html/iamf'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
